--- a/html/cv.html
+++ b/html/cv.html
@@ -10,9 +10,9 @@
 <body>
     <div class="bg-black text-white">
         <div class="content-wrapper">
-            <div class="Judul">My-Cv📌</div>
+            <div class="Judul">Achievement📌</div>
             <div class="profile-picture">
-                <img src="/assets/CV.png" alt="CV">
+                <img src="/assets/CV-Merge.png" alt="CV">
             </div>
             <div class="home-button">
                 <a href="index.html">Home</a>
