--- a/html/experience.html
+++ b/html/experience.html
@@ -16,24 +16,40 @@
                     <h2>Natural Beauty in Indonesia🌴</h2>
                     <a href="https://github.com/Tirtayudha-W/Pweb-">
                         <img src="/assets/beauty-indo.png" alt="beauty-indo">
-                        <p>This project is a portfolio website that introduces the natural 
-                            beauty of Indonesia which has become a tourist spot and is being preserved.</p>
                     </a>
+                    <p class="caption">This project is a portfolio website that introduces the natural 
+                        beauty of Indonesia which has become a tourist spot and is being preserved.</p>
+                </div>
+                <div class="project">
+                    <h2>💄Kembang Ayu💋</h2>
+                    <a href="https://github.com/adityaprimukti/Kembang_Ayu.git">
+                        <img src="/assets/Kembang-ayu.png" alt="Kembang-ayu">
+                    </a>
+                    <p class="caption">This project is one of the final projects in the MSIB Batch 6 activities that I have participated in at Celerates, 
+                    and this website is especially helpful for women and men who like to go on vacation and need beauty treatments.</p>
+                </div>
+                <div class="project">
+                    <h2>EduYou📖</h2>
+                    <a href="https://github.com/Tirtayudha-W/Edu-You.git">
+                        <img src="/assets/Eduyou.png" alt="Eduyou">
+                    </a>
+                    <p class="caption">This project is one of the initial projects created in the MSIB Batch 6 activity that I have participated in at Celerates, 
+                    this website has an online learning theme that helps especially students who are lagging behind in their studies on campus.</p>
                 </div>
                 <div class="project">
                     <h2>Calculator🧮</h2>
                     <a href="https://github.com/Tirtayudha-W/Project_Labti">
                         <img src="/assets/calculate.png" alt="calculate">
-                        <p>This project is a display of the Calculator in general in the form of a website, 
-                            and is used as a requirement for selecting practicum assistants.</p>
                     </a>
+                    <p class="caption">This project is a display of the Calculator in general in the form of a website, 
+                        and is used as a requirement for selecting practicum assistants.</p>
                 </div>
                 <div class="project">
                     <h2>Simple-ChatBot🤖</h2>
                     <a href="https://github.com/Tirtayudha-W/Simple-chatbot">
                         <img src="/assets/simple-chatbot.png" alt="simple-chatbot">
-                        <p>This project is a simple message with user interaction with a robot.</p>
                     </a>
+                    <p class="caption">This project is a simple message with user interaction with a robot.</p>
                 </div>
                 <!-- Add more projects as needed -->
             </div>
