--- a/html/hi.html
+++ b/html/hi.html
@@ -10,7 +10,7 @@
 <body>
     <div class="bg-black text-white">
         <div class="content-wrapper">
-            <div class="Judul">T.Y.W-📌</div>
+            <div class="Judul">My Biodate-📌</div>
             <div class="body-content">
                 <div class="content">
                     <h1 class="content-1">Hi, I'm Tirta Yudha Wibowo</h1>
