--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="bg-black text-white">
         <div class="content-wrapper">
-            <div class="Judul">T.Y.W-📌</div>
+            <div class="Judul">Portfolio-📌</div>
             <div class="body-content">
                 <div class="button-container">
                     <a href="hi.html"><button class="hi-me-button">Hi it's Me</button></a>
@@ -21,7 +21,9 @@
                     <a href="service.html"><button class="service">Service</button></a>
                 </div>
                 <div class="profile-picture">
-                    <img src="/assets/yudha1.jpg" alt="Profile Picture">
+                    <a href="https://github.com/Tirtayudha-W/Web-Portofolio">
+                        <img src="/assets/Bg-Merah.jpg" alt="Profile Picture">
+                    </a>
                 </div>
                 <div class="content">
                     <h1 class="content-1">Hi, I'm Tirta Yudha Wibowo</h1>
