--- a/html/service.html
+++ b/html/service.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Projects</title>
-    <link rel="stylesheet" href="/style/experience.css">
+    <link rel="stylesheet" href="/style/service.css">
 </head>
 <body>
     <div class="bg">
@@ -15,21 +15,47 @@
                 <div class="project">
                     <h2>Web Development</h2>
                     <img src="/assets/web-dev.png" alt="beauty-indo">
-                    <p>Create and maintain your websites and also take care of its performance and traffic capacity.</p>
+                    <p>Create and maintain your websites and also take care of its performance and traffic capacity.</p>
                 </div>
                 <div class="project">
                     <h2>UI/UX</h2>
                     <img src="/assets/UI-UX.png" alt="calculate">
-                    <p>Turn what you have in mind of a digital product into reality. For any platform you consider.
-                    </p>
+                    <p>Turn what you have in mind of a digital product into reality. For any platform you consider.</p>
                 </div>
                 <div class="project">
                     <h2>Application Development</h2>
                     <img src="/assets/app-dev.png" alt="simple-chatbot">
-                    <p>Standard designing, building, and implementing your applications with documentation. 
-                    </p>
+                    <p>Standard designing, building, and implementing your applications with documentation.</p>
                 </div>
-                <!-- Add more projects as needed -->
+            </div>
+            <div class="certificates-container">
+                <div class="certificates">Certificates</div>
+                <ol>
+                    <h3>
+                        <li><a href="https://drive.google.com/file/d/1FRsltJwuELL9410Ubvc-Ji6bK9Qybepm/view?usp=drive_link" target="_blank">PROTOTYPING USING FIGMA</a></li>
+                    </h3>
+                    <h3>
+                        <li><a href="https://drive.google.com/file/d/18hHwIzZP3yibOcCd8TVqmtTwwXPKuIxx/view?usp=drive_link" target="_blank">Workshop JavaScript</a></li>
+                    </h3>
+                    <h3>
+                        <li><a href="https://drive.google.com/file/d/1T_STUAnit38478_tgkIaiONrWPDKxPgX/view?usp=sharing" target="_blank">CREATING A PORTFOLIO-MAKING WEB FOOTER</a></li>
+                    </h3>
+                    <h3>
+                        <li><a href="https://drive.google.com/file/d/1OuPS2rE9439_8UQQ8F1qcUsTE4FP5WfQ/view?usp=drive_link" target="_blank">Celerates Student Graduates</a></li>
+                    </h3>
+                    <h3>
+                        <li><a href="https://drive.google.com/file/d/1DFwIOjDH3hx35qb3GWxZaEATMjSmMEpl/view?usp=sharing" target="_blank">Workshop Grow With HIMTI</a></li>
+                    </h3>
+                    <h3>
+                        <li><a href="https://drive.google.com/file/d/1lZ9s9qKPvdZXd8_48e_tsNTl9Tmqja7_/view?usp=sharing" target="_blank">The Most Diligent Student Program: Web & UI UX</a></li>
+                    </h3>
+                    <h3>
+                        <li><a href="https://drive.google.com/file/d/1q0tgkUqqi03YmVXWTA3ecD5WcaJ8Z_xO/view?usp=sharing" target="_blank">The Best Micro Project Program: Web & UI UX</a></li>
+                    </h3>
+                    <h3>
+                        <li><a href="https://drive.google.com/file/d/1zeRm-wiOg62FBHLEeK_A4s7YxIwwPKN_/view?usp=sharing" target="_blank"> Committee Closing Event</a></li>
+                    </h3>
+                </ol>
             </div>
             <div class="home-button">
                 <a href="index.html">Home</a>
